condor/c176642.p0.error
  File "/user/HS223/ad00878/PhD/batch_diversity/Main.py", line 139
    else config['run_type'] == 'o':
         ^
SyntaxError: invalid syntax
